--- a/shoe website.css
+++ b/shoe website.css
@@ -96,7 +96,7 @@ img {
     justify-content: center;
     align-items: center;
     margin-left: 36px;
-    width: 15%%;
+    width: 15%;
     max-height: 300px;
     min-width: 180px;
     padding: 0 4px;
@@ -346,7 +346,7 @@ footer .follow i:hover {
         align-items: center;
         margin: 0 20px;
         gap: 1rem;
-        width: 15%%;
+        width: 15%;
         max-height: 350px;
         min-width: 135px;
         padding: 0 12px;
