--- a/shoe website.css
+++ b/shoe website.css
@@ -174,7 +174,7 @@ body::after {
 }
 body {
     background: #232323;
-
+    position: relative;
     color: white;
 }
 button.normal {
@@ -337,107 +337,9 @@ footer .follow i:hover {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-@media(max-width:880px) {
-   
-    .product-box {
-        width: 80px;
-        height: 300px;
-        justify-content: center;
-        align-items: center;
-        margin: 0 20px;
-        gap: 1rem;
-        width: 15%;
-        max-height: 350px;
-        min-width: 135px;
-        padding: 0 12px;
-        border: 1px solid #cce7d0;
-        border-radius: 25px;
-        cursor: pointer;
-        text-transform: capitalize;
-        box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
-        transition: .3s ease-in;
-        text-decoration: none;
-        margin-bottom: 25px;
-        backdrop-filter: blur(15px);
-    }
-    .normal-screen-devices {
-        display: contents;
-    }
-    .navigation-bar {
-        width: 110%;
-    }
-    ul li {
-        padding: 26px;
-        position: relative;
-        font-weight: 600;
-        font-size: 20px;
-        padding-bottom: .3rem;
-    }
-    .header {
-        color: #000000;
-        font-family: Geomanist;
-        font-size: 24px;
-        font-weight: 500;
-        width: 110%;
-        text-align: center;
-    }
-    .media-query {
-        display: none;
-    }
-
+#hide {
+    display: none;
 }
-@media(max-width:420px) {
-
-    .navigation-bar {
-        width: 120%;
-    }
-    ul li {
-        padding: 20px;
-        position: relative;
-    }
-    .header {
-        color: #000000;
-        font-family: Geomanist;
-        font-size: 24px;
-        font-weight: 500;
-        width: 120%;
-        text-align: center;
-    }
-}
-@media(max-width:670px) {
-    table tr td:nth-child(4) {
-        display: contents;
-    }
-    .navigation-bar {
-        width: 120%;
-    }
-    ul li {
-        padding: 16px;
-        position: relative;
-        font-weight: 600;
-        font-size: 26px;
-        padding-bottom: .3rem;
-    }
-    .header {
-        color: #000000;
-        font-family: Geomanist;
-        font-size: 24px;
-        font-weight: 500;
-        width: 120%;
-        text-align: center;
-    }
-    @media(max-width:580px) {
-        .header {
-            width: 120%;
-            text-align: center;
-        }
-        .navigation-bar {
-            width: 120%;
-        }
-        ul li {
-            padding: 20px;
-        }
-    }
-    
-
+*{
+    scroll-behavior: smooth;
 }
