--- a/responsive.css
+++ b/responsive.css
@@ -287,23 +287,13 @@
                 display: block;
             }
             body::before {
-                content: '';
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
+                display: none;
                
               
                 z-index: -1;
             }
             body::after {
-                content: '';
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
+               display: none;
                 
                 z-index: -1;
             } body {
