--- a/shoe website.css
+++ b/shoe website.css
@@ -13,24 +13,34 @@ ul li{
     padding: 20px;
     position: relative;  
     cursor: pointer; 
+   
 }  
-header .small-navigation {
+.small-navigation {
+    position: relative;
+}
+header .small-navigation ul{
     
     justify-content: center;
     align-items: center;
     list-style: none;
     float: left;
     padding: 15px;
-    margin-bottom: 10px;
+    top: 30px;
+    z-index: -50;
     position: relative;
     margin-top: 20px;
     background-image: linear-gradient(to right,#47aafa,#ef3b36);
-  
+    z-index: 300;
     margin-left: 230px;
     max-width: 100%;
-    height: 30px;
+    height: 40px;
     cursor: pointer;
+    overflow: hidden;
 }   
+header .small-navigation ul li {
+    padding-top: 0;
+    padding-bottom: 2px;
+}
 
 
 i {
@@ -39,10 +49,11 @@ i {
 .navigation-bar {
     
     width: 100%;
+    position: relative;
     height: 50px;
     position: fixed;
     padding-inline-start: 66%;
-    z-index: 200;
+    z-index: 1000;
     background-image: linear-gradient(to right,blue,red);
  
 }
@@ -135,7 +146,7 @@ button:nth-child(even):hover,button:nth-child(odd):hover {
 .advert-banner {
     background-image: url("images/png/bb9c2c52748e491c34e029c744eb727925cc94ba-4400x1890.jpg");
     width: 100%;
-    height: clamp(10vh,50vh,50vh);
+    height: clamp(10vh,50vh,450vh);
     padding-bottom: 5rem;
     width: 100%;
     background-size: cover;
