--- a/sign in responsive.css
+++ b/sign in responsive.css
@@ -1,3 +1,8 @@
+/* @media(max-width:1000px){
+    * {
+        height: fit-content;
+    }
+} */
 @media(max-width:500px){
     * {
         cursor: none;
@@ -6,8 +11,9 @@
        display: none;  
     } 
     .header {
-        font-size: 16px;
-        margin-top: 2rem;
+        font-size: 2rem;
+        margin-top: 3rem;
+        overflow: hidden;
     }
     .header h3{
         font-size: 10px;
@@ -35,7 +41,7 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     input::placeholder {
-        font-size: 10px;
+        font-size: 8px;
         transition: .5s;
         padding-left: 5px;
     }
@@ -54,7 +60,7 @@
         width: 100%;
         height: 20px;
         cursor: pointer;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
         z-index: 200;
         background-image: linear-gradient(to right,blue,red);
     }
@@ -87,6 +93,9 @@
     .pass p {
         font-size: 10px;
         cursor: none;
+    }
+    footer {
+        margin-bottom: -2rem;
     }
     footer .col:nth-child(3),footer .col:nth-child(2),footer .col:nth-child(4){
         display: none;
