--- a/shoe website.css
+++ b/shoe website.css
@@ -171,6 +171,7 @@ body::before {
     background-image: linear-gradient(to right,#47aafa,#ef3b36);
     clip-path:circle(65% at 100%-20%);
     z-index: -1;
+    overflow: hidden;
 }
 body::after {
     content: '';
@@ -182,6 +183,7 @@ body::after {
     background-image: linear-gradient(to right,#47aafa,#ef3b36);
     clip-path:circle(30% at 15% 100%);
     z-index: -1;
+    overflow: hidden;
 }
 body {
     background: #232323;
